<resources>
    <string name="app_name">May Tropa</string>
    <string name="create_account">Create account</string>
    <string name="login">Login</string>
    <string name="forget_password">Forgot Password ?</string>
    <string name="password">Password</string>
    <string name="username_contact_number">Username / Contact Number</string>
    <string name="welcome_to_getu">Welcome to May Tropa</string>
    <string name="i_am_a_freelancer">I am a freelancer</string>
    <string name="get_started">Get Started</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="signin_here">signin here</string>
    <string name="new_to_getu">New to May Tropa ?</string>
    <string name="email_id">Email Id</string>
    <string name="contact_number">Contact number</string>
    <string name="address">Address</string>
    <string name="i_accept_the">I accept the</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="sign_up">Sign up</string>
    <string name="login_here">Login here</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="otp_discription">You need to enter your 4 digit verification</string>
    <string name="enter_4_digit_code">Enter 4 digit code</string>
    <string name="dont_t_recive_otp">Didn\'t recive OTP ?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="printing_and_typesetting_industry">code to create your account.</string>
    <string name="forgot_your">Forgot Your</string>
    <string name="pass">Password ?</string>
    <string name="forgot_dis">Please enter your email address to retrieve your password.</string>
    <string name="reset_my_password">Reset My Password</string>
    <string name="for_exit">Please click BACK again to exit.</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="or">OR</string>
    <string name="getu">May Tropa</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="matthew_ross">Matthew Ross</string>
    <string name="lawyer">Lawyer</string>
    <string name="map">Map</string>
    <string name="online">Online</string>
    <string name="Profile">Profile</string>
    <string name="profile_dis">21 Pheasant Drive Sunnyslops St. Snellville Chicago Heights, IL 60411</string>
    <string name="conversation">Conversation</string>
    <string name="_10">0</string>
    <!--<string name="map_key">AIzaSyA8BqHePU6a-76RC6xZ6awRkQHrfTn54sU</string>-->
    <string name="map_key">AIzaSyBdOK2CkMZPji0cuuo_cDALSxchwYiCEs4</string>
    <string name="chetan_thakur">Chetan Thakur</string>
    <string name="user_dis">514 S, Magnolia St. Orlando, FL 32806</string>
    <string name="photographer">Photographer</string>
    <string name="under_development">Under Development</string>
    <string name="find_help_near_me">Find Help Near Me</string>
    <string name="Permissions_denight">Permissions denight</string>
    <string name="_5_miles">miles</string>
    <string name="search_by_location">Search by location</string>

    <string name="facebook_app_id">2195609973854886</string>
    <string name="fb_login_protocol_scheme">fb2195609973854886</string>

    <string name="check_net_connection">Please check internet connection.!</string>
    <string name="password_required">Your password at least 6 characters</string>
    <string name="select_image">Please select image</string>
    <string name="for_password">Please enter your password</string>
    <string name="for_usrname">Please enter username</string>
    <string name="enter_email">Please enter email</string>
    <string name="chat_dis">21 Pheasant Drive Sunnyslope St. Snellville Chicago Heights, IL 60411</string>
    <string name="name">Full Name</string>
    <string name="category">Please select a category</string>
    <string name="Space">Space not allowed in username</string>
    <string name="fullname">Please enter full name</string>
    <string name="enterUsername">Please enter username</string>
    <string name="email">Please enter your email address</string>
    <string name="validEmail">Please enter a valid email address</string>
    <string name="contactNo">Please enter a contact number</string>
    <string name="enter_name">Please enter fullname</string>
    <string name="notification">Notification</string>
    <string name="working_status">Working Status</string>
    <string name="profile">Profile</string>
    <string name="change_password">Change Password</string>
    <string name="change_number">Change Number</string>
    <string name="share">Share</string>
    <string name="feedback">Feedback</string>
    <string name="term_and_conditions">Terms and Conditions</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="otp">Please enter OTP</string>
    <string name="worng_otp">Wrong otp</string>
    <string name="no_data_found">No data found</string>
    <string name="username">Username</string>
    <string name="miles">miles</string>
    <string name="full_name">Full Name</string>
    <string name="change_password_dailog">Change Password?</string>
    <string name="change_number_d">Change number?</string>
    <string name="about_us_dis">May Tropa has no control over, and assumes no responsibility for the content, privacy policies, or practices of any third party web sites or services. We do not warrant the offerings of any of these entities/individuals or their websites.
You acknowledge and agree that May Tropa shall not be responsible or liable, directly or indirectly, for any damage or loss caused or alleged to be caused by or in connection with use of or reliance on any such content, goods or services available on or through any such third party web sites or services.
</string>
    <string name="type_here">Type here ....</string>
    <string name="no_chat_history_found">No chat history found</string>
    <string name="no_chat_found">No chat found</string>
    <string name="action_search">Search</string>
    <string name="no_connection">No Connection</string>
    <string name="enter_contact">Please enter a contact number</string>
    <string name="contact_required">Atleast 4 digit required</string>
    <string name="contact_wrong">Enter Correct contact number with country code</string>
    <string name="enter_address">Please enter address</string>
    <string name="settings">Settings</string>
    <string name="enter_feedback">Please enter feedback</string>
    <string name="enter_old_password">Please enter old password</string>
    <string name="enter_new_password">Please enter new password</string>
    <string name="password_change">You can\'t change your password in social login</string>
    <string name="session">your session will expire, when you change your password</string>
    <string name="session_contact">your session will expire, when you change your Contact Number</string>
    <string name="inactivated_account">Your account has been inactivated by admin, please contact to activate</string>
    <string name="enter_password">Please enter Password</string>
    <string name="tandc">You must accept terms and conditions</string>
    <string name="network_msg">There\'s no network connection. Make sure the your\'re connected to a Wi-fi or mobile network and try again.</string>
</resources>
