<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White">

    <include
        layout="@layout/actionbar_layout"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/White"
            android:layout_gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_for_profileImg"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_130sdp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/user" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_for_profileImgOffline"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_130sdp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/user" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_for_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/matthew_ross"
            android:textColor="@color/Green"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:id="@+id/tv_for_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/lawyer"
            android:textColor="@color/darkGrey"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/tv_for_address"
            android:layout_width="@dimen/_260sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:text="@string/profile_dis"
            android:textColor="@color/darkGrey"
            android:textSize="@dimen/_12sdp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_for_chatCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/_10"
                android:textColor="@color/Green"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/conversation" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
