<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_16sdp"
    android:focusableInTouchMode="true"
    tools:context="getu.app.com.getu.common_activity.WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            android:layout_gravity="center"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/welcome_to_getu"
            android:textColor="@color/Green"
            android:textSize="@dimen/_20ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/spinner_bg"
            android:gravity="center">

            <Spinner
                android:id="@+id/sp_for_selectItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:dropDownWidth="@dimen/_250sdp"
                android:overlapAnchor="false"
                android:backgroundTint="@color/yellow" />


        </LinearLayout>

            <RadioButton
                android:id="@+id/rb_for_freelancer"
                android:layout_margin="@dimen/_8sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:buttonTint="@color/yellow"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/i_am_a_freelancer"
                android:textColor="@color/darkGrey"
                android:textSize="@dimen/_12ssp" />

        <Button
            android:id="@+id/btn_for_start"
            android:layout_width="@dimen/_220sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/get_started"
            android:textAllCaps="false"
            android:textColor="@color/White" />

        <LinearLayout
            android:id="@+id/layout_for_signin"
            android:padding="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:imeOptions="actionDone"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/already_have_an_account"
                android:textColor="@color/darkGrey"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_2sdp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/login_here"
                android:textColor="@color/Green"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
