<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:padding="@dimen/_12sdp"
    tools:context="getu.app.com.getu.common_activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/_5sdp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_gravity="center"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/et_for_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@null"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/username_contact_number"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:padding="@dimen/_10sdp"
            android:singleLine="true"
            android:textColor="@color/darkGrey"
            android:textColorHint="@color/lightGrey"
            android:textSize="@dimen/_12ssp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:background="@color/lightGrey" />

        <EditText
            android:id="@+id/et_for_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@null"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="@dimen/_10sdp"
            android:singleLine="true"
            android:textColor="@color/darkGrey"
            android:textColorHint="@color/lightGrey"
            android:textSize="@dimen/_12ssp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:background="@color/lightGrey" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:padding="@dimen/_5sdp">

            <TextView
                android:id="@+id/tv_for_forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/forget_password"
                android:textColor="@color/Green"
                android:textSize="@dimen/_12ssp" />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_for_login"
            android:layout_width="@dimen/_220sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/White"
            android:textSize="@dimen/_12ssp" />

        <LinearLayout
            android:layout_width="@dimen/_220sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="@dimen/_100sdp"
                android:layout_height="1dp"
                android:background="@color/lightGrey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/or"
                android:textColor="@color/darkGrey"
                android:textSize="@dimen/_15sdp" />

            <View
                android:layout_width="@dimen/_100sdp"
                android:layout_height="1dp"
                android:background="@color/lightGrey" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp">

            <ImageView
                android:id="@+id/iv_for_facebook"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:imeOptions="actionDone"
                android:src="@drawable/facebook_icon" />

            <ImageView
                android:id="@+id/iv_for_google"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:imeOptions="actionDone"
                android:text="@string/common_signin_button_text_long"
                android:src="@drawable/google_plus_icon" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_for_createAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:imeOptions="actionDone"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/new_to_getu"
                android:textColor="@color/darkGrey"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_2sdp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/create_account"
                android:textColor="@color/Green"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_5sdp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_for_TandC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/terms_and_conditions"
            android:textColor="@color/Green"
            android:textSize="@dimen/_12sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/Green" />
    </LinearLayout>


</RelativeLayout>
