<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5sdp"
    android:elevation="8dp"
    android:padding="@dimen/_5sdp"
    android:background="@color/darkWhite"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:src="@drawable/user"
            android:layout_margin="@dimen/_5sdp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            app:civ_border_color="@color/Green"
            app:civ_border_width="@dimen/_2sdp" />

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_40sdp"
            android:layout_toRightOf="@+id/profile_image"
            android:layout_marginLeft="@dimen/_10sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_for_fullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chetan_thakur"
                android:ellipsize="end"
                android:singleLine="true"
                android:maxLines="1"
                android:textColor="@color/darkGrey"
                android:textSize="@dimen/_15ssp" />

            <TextView
                android:id="@+id/tv_for_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:maxLines="1"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/photographer"
                android:textColor="@color/darkGrey"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:id="@+id/tv_for_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:maxLines="1"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/user_dis"
                android:textColor="@color/darkGrey"
                android:textSize="@dimen/_10ssp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/iamge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:src="@drawable/like_icon" />

    </RelativeLayout>

</android.support.v7.widget.CardView>
