<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_210sdp"
    android:layout_height="@dimen/_90sdp"
    android:padding="@dimen/_5sdp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/map_list_bg"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/_5sdp"
                android:src="@drawable/user"
                app:civ_border_color="@color/Green"
                app:civ_border_width="@dimen/_1sdp" />

            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_toRightOf="@+id/profile_image"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_for_fullName"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="wrap_content"
                    android:text="@string/chetan_thakur"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:textColor="@color/Green"
                    android:textSize="@dimen/_15ssp" />

                <TextView
                    android:id="@+id/tv_for_category"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_light"
                    android:text="@string/photographer"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:textColor="@color/darkGrey"
                    android:textSize="@dimen/_10ssp" />

                <LinearLayout
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_for_distance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_light"
                        android:textColor="@color/darkGrey"
                        android:textSize="@dimen/_10ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_2sdp"
                        android:fontFamily="@font/montserrat_light"
                        android:text="@string/_5_miles"
                        android:textColor="@color/darkGrey"
                        android:textSize="@dimen/_10ssp" />

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/iamge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:src="@drawable/like_icon" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/lightGrey" />

        <TextView
            android:id="@+id/tv_for_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_2sdp"
            android:fontFamily="@font/montserrat_light"
            android:gravity="center"
            android:text="@string/user_dis"
            android:textColor="@color/darkGrey"
            android:textSize="@dimen/_10ssp" />

    </LinearLayout>

</RelativeLayout>