<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_10sdp"
    android:focusableInTouchMode="true"
    tools:context="getu.app.com.getu.common_activity.ForgotPasswordActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_for_back"
            android:src="@drawable/back_ico"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp" />

        <ImageView
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_gravity="center"
            android:src="@drawable/lock_ico"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp" />

        <TextView
            android:gravity="center"
            android:fontFamily="@font/montserrat_regular"
            android:layout_marginTop="@dimen/_20sdp"
            android:textColor="@color/Green"
            android:layout_gravity="center"
            android:text="Forgot Your Password ?"
            android:textSize="@dimen/_20ssp"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="@color/darkGrey"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/forgot_dis"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content" />



            <EditText
                android:id="@+id/et_for_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@null"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/email_id"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:singleLine="true"
                android:textColor="@color/darkGrey"
                android:textColorHint="@color/lightGrey"
                android:textSize="@dimen/_12sdp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:background="@color/lightGrey" />

        <Button
            android:id="@+id/btn_for_resetPassword"
            android:layout_marginBottom="@dimen/_50sdp"
            android:imeOptions="actionDone"
            android:layout_width="@dimen/_220sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/reset_my_password"
            android:textAllCaps="false"
            android:textColor="@color/White" />
    </LinearLayout>

</RelativeLayout>
